# cinnamon-session

./: .gitignore  AUTHORS  ChangeLog  HACKING  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  cinnamon-session.pot  config.h.in  configure  configure.ac  makepot  meson.build  meson_options.txt
.github/: ISSUE_TEMPLATE.md
.pc/: applied-patches
.pc/01_gnome-wm.patch/data/: gnome-fallback.session.desktop.in.in
.pc/03_fallback_desktop_makefile.patch/data/: Makefile.am
.pc/04_consolekit_init_upower.patch/gnome-session/: gsm-consolekit.c
capplet/: Makefile.am  Makefile.in  csm-app-dialog.c  csm-app-dialog.h  csm-properties-dialog.c  csm-properties-dialog.h  csp-app-manager.c  csp-app-manager.h  csp-app.c  csp-app.h  csp-keyfile.c  csp-keyfile.h  gsm-app-dialog.c  gsm-properties-dialog.c  gsp-app.c  gsp-app.h  gsp-keyfile.c  gsp-keyfile.h  main.c
cinnamon-session/: Makefile.am  Makefile.in  README  cinnamon-session.in  cs-idle-monitor.c  cs-idle-monitor.h  csm-app.c  csm-app.h  csm-autostart-app.c  csm-autostart-app.h  csm-client.c  csm-client.h  csm-consolekit.c  csm-consolekit.h  csm-dbus-client.c  csm-dbus-client.h  csm-fail-whale-dialog.c  csm-fail-whale-dialog.h  csm-icon-names.h  csm-inhibit-dialog.c  csm-inhibit-dialog.h  csm-inhibitor.c  csm-inhibitor.h  csm-logout-dialog.c  csm-logout-dialog.h  csm-manager.c  csm-manager.h  csm-marshal.c  csm-marshal.h  csm-presence.c  csm-presence.h  csm-process-helper.c  csm-process-helper.h  csm-session-fill.c  csm-session-fill.h  csm-session-save.c  csm-session-save.h  csm-shell-extensions.c  csm-shell-extensions.h  csm-shell.c  (+54 more)
cinnamon-session-quit/: cinnamon-session-quit.glade  cinnamon-session-quit.in  cinnamon-session-quit.py  config.py.in  meson.build
data/: Makefile.am  Makefile.in  cinnamon-session-properties.desktop.in.in  cinnamon-session-properties.glade  csm-inhibit-dialog.glade  csm-inhibit-dialog.ui  gnome-fallback-compiz.desktop.in  gnome-fallback-compiz.session.desktop.in.in  gnome-fallback.desktop.in  gnome-fallback.session.desktop.in.in  gnome.desktop.in  gnome.session.desktop.in.in  hardware-compatibility  meson.build  org.cinnamon.SessionManager.gschema.xml  org.cinnamon.SessionManager.gschema.xml.in  org.gnome.SessionManager.gschema.xml.in  session-properties.desktop.in.in  ubuntu.desktop.in  ubuntu.session.desktop.in.in
data/icons/: Makefile.in
data/icons/16x16/: Makefile.am  Makefile.in
data/icons/22x22/: Makefile.am  Makefile.in
data/icons/24x24/: Makefile.am  Makefile.in
data/icons/32x32/: Makefile.am  Makefile.in
data/icons/48x48/: Makefile.am  Makefile.in
data/icons/scalable/: Makefile.am  Makefile.in
data/systemd/user/: cinnamon-session.target  meson.build
debian/: 55cinnamon-session_gnomerc  55gnome-session_gnomerc  README.Debian  changelog  cinnamon-session-common.install  cinnamon-session-common.links  cinnamon-session.install  cinnamon-session.postinst  cinnamon-session.prerm  cinnamon-session.user-session.upstart  cinnamon-wm.desktop.desktop  control  control.in  copyright  defaults.list  gnome-session-bin.install  gnome-session-bin.prerm  gnome-session-common.install  gnome-session-fallback.install  gnome-session-fallback.postinst  gnome-session-fallback.prerm  gnome-session.install  gnome-session.postinst  gnome-session.postrm  gnome-session.user-session.upstart  gnome-wm.desktop  lrc.config  not-installed  rules  watch
debian/patches/: 01_gnome-wm.patch  02_fallback_desktop.patch  03_fallback_desktop_makefile.patch  04_consolekit_init_upower.patch  101_screen_lock_on_suspend.patch  103_kill_the_fail_whale.patch  104_dont_show_fallback_warning.patch  105_hide_session_startup_help.patch  106_display_gnome-session-properties.patch  10_session_save.patch  12_no_gdm_fallback.patch  20_hide_nodisplay.patch  22_support_autostart_delay.patch  50_ubuntu_sessions.patch  52_xdg_current_desktop.patch  53_add_sessionmigration.patch  80_new_upstream_session_dialog.patch  95_dbus_request_shutdown.patch  96_no_catch_sigsegv.patch  97_dont_blacklist_llvmpipe.patch  series
debian/po-up/: POTFILES.in  af.po  am.po  ar.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  ja.po  (+48 more)
debian/scripts/: cinnamon-session-fallback  cinnamon-wm  gnome-session-fallback
doc/: Makefile.in  meson.build
doc/dbus/: Makefile.am  Makefile.in  cinnamon-session.xml.in  gnome-session.xml.in  meson.build
doc/man/: Makefile.am  Makefile.in  cinnamon-session-quit.1  cinnamon-session.1  gnome-session-properties.1  gnome-session-quit.1  gnome-session.1  meson.build
egg/: Makefile.am  Makefile.in  eggdesktopfile.c  eggdesktopfile.h  eggsmclient-private.h  eggsmclient-xsmp.c  eggsmclient.c  eggsmclient.h  meson.build
gnome-session/: Makefile.am  Makefile.in  README  gdm-signal-handler.c  gs-idle-monitor.c  gsm-autostart-app.c  gsm-autostart-app.h  gsm-consolekit.c  gsm-fail-whale-dialog.c  gsm-icon-names.h  gsm-inhibitor.c  gsm-inhibitor.h  gsm-logout-dialog.h  gsm-manager.c  gsm-manager.h  gsm-marshal.c  gsm-process-helper.c  gsm-process-helper.h  gsm-session-fill.c  gsm-session-fill.h  gsm-session-save.c  gsm-session-save.h  gsm-shell-extensions.h  gsm-shell.c  gsm-shell.h  gsm-system.c  gsm-system.h  gsm-util.c  gsm-util.h  test-inhibit.c
m4/: intltool.m4
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  csb.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  fy.po  ga.po  gl.po  (+67 more)
tools/: Makefile.am  Makefile.in  cinnamon-session-check-accelerated-helper.c  cinnamon-session-check-accelerated.c  cinnamon-session-quit.c  gnome-session-check-accelerated-helper.c  gnome-session-check-accelerated.c  gnome-session-quit.c  meson.build
(+29 files in other folders)
